--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="label_overview">Overview</string>
     <string name="error_request">Ooops, something bad happened please try again</string>
     <string name="label_retry">Retry</string>
+    <string name="title_trending">Trending</string>
     <string name="title_discover">Discover</string>
     <string name="title_watchlist">Watchlist</string>
     <string name="title_share">Share Film</string>
