--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="label_retry">Retry</string>
     <string name="no_results">No results found</string>
     <string name="search_films">Search films</string>
+    <string name="added_watchlist">Added to watchlist</string>
+    <string name="removed_watchlist">Removed from watchlist</string>
+    <string name="undo">Undo</string>
     <string name="title_trending">Trending</string>
     <string name="title_discover">Discover</string>
     <string name="title_search">Search</string>
